<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Line Challenge Memo</string>
    <string name="main_no_memo">There are no memos.</string>
    <string name="menu_search">Search</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_url" translatable="false">URL</string>
    <string name="write_label_create">New Memo</string>
    <string name="write_label_edit">Edit Memo</string>
    <string name="write_title_hint">Write title here.</string>
    <string name="write_text_hint">Write text here.</string>
    <string name="write_saved">Memo saved.</string>
    <string name="write_edited">Memo edited.</string>
    <string name="write_dialog_show">Show Image</string>
    <string name="write_dialog_delete">Delete Image</string>
    <string name="write_dialog_internet">Get image from internet</string>
    <string name="write_dialog_url">Enter URL here.</string>
    <string name="write_downloading_image">Downloading image&#8230;</string>
    <string name="write_dialog_cancel">Will you cancel writing this memo?</string>
    <string name="write_canceled">Memo writing canceled.</string>
    <string name="read_dialog_delete">Are you sure to delete this memo?</string>
    <string name="read_deleted">Memo deleted.</string>
    <string name="search_label">Search Memo</string>
    <string name="search_button">Search</string>
    <string name="search_query_hint">Write text to search.</string>
    <string name="search_empty_result">Search result is empty.</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_empty_memo">Memo is empty!</string>
    <string name="error_empty_query">Query is empty!</string>
    <string name="error_url">URL is wrong or there is no internet connection!</string>
    <string name="error_image_not_found">Image is not found!</string>
</resources>
