<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/AppTheme.AppBarOverlay" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:id="@+id/write_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanum_gothic_bold"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:text="@string/search_label" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_appbar"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:padding="15dp"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/search_edit_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:background="@drawable/bg_round_corner"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:textSize="17sp"
                android:textColor="#222222"
                android:maxLines="1"
                android:fontFamily="@font/nanum_gothic"
                android:hint="@string/search_query_hint"
                android:importantForAutofill="no" >
                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/search_button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/colorAccent"
                android:text="@string/search_button"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>

        <TextView
            android:id="@+id/search_text_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:text="@string/search_empty_result"
            android:fontFamily="@font/nanum_gothic_bold"
            android:textSize="23sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler_memo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/search_box"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
